Add Dockerfile and prod profile for Render deployment